--- a/angular.json
+++ b/angular.json
@@ -41,7 +41,8 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/AVozdoRespeito",
+            "outputPath": "docs",
+            "baseHref": "https://jonathansantos2000.github.io/AVozdoRespeito/",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
